removded incorrect files

--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 	</head>
 	<body>
 		<div id="main-app">
-			
+			<top-nav></top-nav>
+			<left-nav></left-nav>
+			<right-nav></right-nav>
+			<footer-nav></footer-nav>
+			<main-stage></main-stage>
 		</div>
 		<script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
 		<script src="js/jquery-3.2.1.min.js"></script>
@@ -19,6 +23,13 @@
 		<script src="js/vuex-3.0.1.js"></script>
 
 		<!-- views -->
+		<script src="views/FooterNav.js"></script>
+		<script src="views/MainStage.js"></script>
+		<script src="views/LeftNav.js"></script>
+		<script src="views/RightNav.js"></script>
+		<script src="views/Timeline.js"></script>
+		<script src="views/TopNav.js"></script>
+
 
 		<script type="text/javascript" src="js/script.js"></script>
 	</body>
