building out ui

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<body>
 		<div id="main-app">
 			<top-nav></top-nav>
+			<timeline></timeline>
 			<left-nav></left-nav>
 			<right-nav></right-nav>
 			<footer-nav></footer-nav>
