building out timeline

--- a/index.html
+++ b/index.html
@@ -24,13 +24,14 @@
 		<script src="js/vuex-3.0.1.js"></script>
 
 		<!-- views -->
+		<script src="views/ActionsLayer.js"></script>
 		<script src="views/FooterNav.js"></script>
 		<script src="views/MainStage.js"></script>
 		<script src="views/LeftNav.js"></script>
 		<script src="views/RightNav.js"></script>
 		<script src="views/Timeline.js"></script>
+		<script src="views/TimelineLayer.js"></script>
 		<script src="views/TopNav.js"></script>
-
 
 		<script type="text/javascript" src="js/script.js"></script>
 	</body>
