--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 			<right-nav></right-nav>
 			<footer-nav></footer-nav>
 			<main-stage></main-stage>
+			<context-controls></context-controls>
 		</div>
 		<script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
 		<script src="js/jquery-3.2.1.min.js"></script>
@@ -25,10 +26,14 @@
 
 		<!-- views -->
 		<script src="views/ActionsLayer.js"></script>
+		<script src="views/Alignment.js"></script>
 		<script src="views/FooterNav.js"></script>
+		<script src="views/Layers.js"></script>
 		<script src="views/MainStage.js"></script>
 		<script src="views/LeftNav.js"></script>
 		<script src="views/RightNav.js"></script>
+		<script src="views/Sprites.js"></script>
+		<script src="views/ContextControls.js"></script>
 		<script src="views/Timeline.js"></script>
 		<script src="views/TimelineLayer.js"></script>
 		<script src="views/TopNav.js"></script>
