building out UI

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 		<div id="main-app">
 			<top-nav></top-nav>
 			<timeline></timeline>
+			<timeline-controls></timeline-controls>
 			<left-nav></left-nav>
+			<tool-palette></tool-palette>
 			<right-nav></right-nav>
 			<footer-nav></footer-nav>
 			<main-stage></main-stage>
@@ -27,15 +29,18 @@
 		<!-- views -->
 		<script src="views/ActionsLayer.js"></script>
 		<script src="views/Alignment.js"></script>
+		<script src="views/ContextControls.js"></script>
 		<script src="views/FooterNav.js"></script>
 		<script src="views/Layers.js"></script>
 		<script src="views/MainStage.js"></script>
 		<script src="views/LeftNav.js"></script>
 		<script src="views/RightNav.js"></script>
+		<script src="views/Scrubber.js"></script>
 		<script src="views/Sprites.js"></script>
-		<script src="views/ContextControls.js"></script>
 		<script src="views/Timeline.js"></script>
+		<script src="views/TimelineControls.js"></script>
 		<script src="views/TimelineLayer.js"></script>
+		<script src="views/ToolPalette.js"></script>
 		<script src="views/TopNav.js"></script>
 
 		<script type="text/javascript" src="js/script.js"></script>
