building out UI

--- a/index.html
+++ b/index.html
@@ -30,10 +30,12 @@
 		<script src="views/ActionsLayer.js"></script>
 		<script src="views/Alignment.js"></script>
 		<script src="views/ContextControls.js"></script>
+		<script src="views/Fonts.js"></script>
 		<script src="views/FooterNav.js"></script>
 		<script src="views/Layers.js"></script>
-		<script src="views/MainStage.js"></script>
 		<script src="views/LeftNav.js"></script>
+		<script src="views/MainStage.js"></script>
+		<script src="views/Properties.js"></script>
 		<script src="views/RightNav.js"></script>
 		<script src="views/Scrubber.js"></script>
 		<script src="views/Sprites.js"></script>
