building out UI

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 		<!-- views -->
 		<script src="views/ActionsLayer.js"></script>
 		<script src="views/Alignment.js"></script>
+		<script src="views/Assets.js"></script>
 		<script src="views/ContextControls.js"></script>
 		<script src="views/Fonts.js"></script>
 		<script src="views/FooterNav.js"></script>
@@ -38,7 +39,6 @@
 		<script src="views/Properties.js"></script>
 		<script src="views/RightNav.js"></script>
 		<script src="views/Scrubber.js"></script>
-		<script src="views/Sprites.js"></script>
 		<script src="views/Timeline.js"></script>
 		<script src="views/TimelineControls.js"></script>
 		<script src="views/TimelineLayer.js"></script>
