building out assets

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 		<!-- views -->
 		<script src="views/ActionsLayer.js"></script>
 		<script src="views/Alignment.js"></script>
+		<script src="views/AssetItem.js"></script>
 		<script src="views/Assets.js"></script>
 		<script src="views/ContextControls.js"></script>
 		<script src="views/Fonts.js"></script>
